5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4140/executions/1674_1104.log
== TEST (2019-04-30 10:59:03) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
if(B<a and d<c):
	print("Intervalo 1: ",a",", b)
	print("Intervalo 1: ",c",", d)
	print("Entradas invalidas")
else:
	
	if(a<c and b<c) or( a>d and b>d):
		print("Intervalo 1: ",a",", b)
		print("Intervalo 1: ",c",", d)
		print("Nao ha intersecao")
	else:
		print("Intervalo 1: ",a",", b)
		print("Intervalo 1: ",c",", d)
		print("Ha intersecao")
		
	

-- ERROR:
File "XXXX", line 6
    print("Intervalo 1: ",a",", b)
                             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 10:59:46) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
if(B<a and d<c):
	print("Intervalo 1: ",a,",", b)
	print("Intervalo 1: ",c,",", d)
	print("Entradas invalidas")
else:
	
	if(a<c and b<c) or( a>d and b>d):
		print("Intervalo 1: ",a,",", b)
		print("Intervalo 1: ",c,",", d)
		print("Nao ha intersecao")
	else:
		print("Intervalo 1: ",a,",", b)
		print("Intervalo 1: ",c,",", d)
		print("Ha intersecao")
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(B<a and d<c):
NameError: name 'B' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 10:59:57) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
if(B<a and d<c):
	print("Intervalo 1: ",a,",", b)
	print("Intervalo 1: ",c,",", d)
	print("Entradas invalidas")
else:
	
	if(a<c and b<c) or( a>d and b>d):
		print("Intervalo 1: ",a,",", b)
		print("Intervalo 1: ",c,",", d)
		print("Nao ha intersecao")
	else:
		print("Intervalo 1: ",a,",", b)
		print("Intervalo 1: ",c,",", d)
		print("Ha intersecao")
		
	

-- EXECUTION TIME:
0.205534
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1104/main.py", line 5, in <module>
    if(B<a and d<c):
NameError: name 'B' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:00:05) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
if(B<a and d<c):
	print("Intervalo 1: ",a,",", b)
	print("Intervalo 1: ",c,",", d)
	print("Entradas invalidas")
else:
	
	if(a<c and b<c) or( a>d and b>d):
		print("Intervalo 1: ",a,",", b)
		print("Intervalo 1: ",c,",", d)
		print("Nao ha intersecao")
	else:
		print("Intervalo 1: ",a,",", b)
		print("Intervalo 1: ",c,",", d)
		print("Ha intersecao")
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(B<a and d<c):
NameError: name 'B' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:00:23) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
if(B<a and d<c):
	print("Intervalo 1: ",a,",", b)
	print("Intervalo 2: ",c,",", d)
	print("Entradas invalidas")
else:
	
	if(a<c and b<c) or( a>d and b>d):
		print("Intervalo 1: ",a,",", b)
		print("Intervalo 2: ",c,",", d)
		print("Nao ha intersecao")
	else:
		print("Intervalo 1: ",a,",", b)
		print("Intervalo 2: ",c,",", d)
		print("Ha intersecao")
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(B<a and d<c):
NameError: name 'B' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:00:27) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
if(B<a and d<c):
	print("Intervalo 1: ",a,",", b)
	print("Intervalo 2: ",c,",", d)
	print("Entradas invalidas")
else:
	
	if(a<c and b<c) or( a>d and b>d):
		print("Intervalo 1: ",a,",", b)
		print("Intervalo 2: ",c,",", d)
		print("Nao ha intersecao")
	else:
		print("Intervalo 1: ",a,",", b)
		print("Intervalo 2: ",c,",", d)
		print("Ha intersecao")
		
	

-- EXECUTION TIME:
0.193519
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1104/main.py", line 5, in <module>
    if(B<a and d<c):
NameError: name 'B' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:00:31) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
if(B<a and d<c):
	print("Intervalo 1: ",a,",", b)
	print("Intervalo 2: ",c,",", d)
	print("Entradas invalidas")
else:
	
	if(a<c and b<c) or( a>d and b>d):
		print("Intervalo 1: ",a,",", b)
		print("Intervalo 2: ",c,",", d)
		print("Nao ha intersecao")
	else:
		print("Intervalo 1: ",a,",", b)
		print("Intervalo 2: ",c,",", d)
		print("Ha intersecao")
		
	

-- EXECUTION TIME:
0.137166
-- ERROR:
Traceback (most recent call last):
  File "/home/codebench/codes/1674/1104/main.py", line 5, in <module>
    if(B<a and d<c):
NameError: name 'B' is not defined

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:00:54) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
if(B<a and d<c):
	print("Intervalo 1: ",a,",", b)
	print("Intervalo 2: ",c,",", d)
	print("Entradas invalidas")
else:
	
	if(a<c and b<c) or( a>d and b>d):
		print("Intervalo 1: ",a,",", b)
		print("Intervalo 2: ",c,",", d)
		print("Nao ha intersecao")
	else:
		print("Intervalo 1: ",a,",", b)
		print("Intervalo 2: ",c,",", d)
		print("Ha intersecao")
		
	

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 5, in <module>
    if(B<a and d<c):
NameError: name 'B' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:10:16) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
if(b<a and d<c):
	print("Intervalo 1: ",a,",", b)
	print("Intervalo 2: ",c,",", d)
	print("Entradas invalidas")
else:
	
	if(a<c and b<c) or( a>d and b>d):
		print("Intervalo 1: ",a,",", b)
		print("Intervalo 2: ",c,",", d)
		print("Nao ha intersecao")
	else:
		print("Intervalo 1: ",a,",", b)
		print("Intervalo 2: ",c,",", d)
		print("Ha intersecao")
		
	

-- EXECUTION TIME:
0.156682
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1:  1.5 , 5.0
Intervalo 2:  2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1:  -1.0 , -3.0
Intervalo 2:  1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:10:20) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
if(b<a and d<c):
	print("Intervalo 1: ",a,",", b)
	print("Intervalo 2: ",c,",", d)
	print("Entradas invalidas")
else:
	
	if(a<c and b<c) or( a>d and b>d):
		print("Intervalo 1: ",a,",", b)
		print("Intervalo 2: ",c,",", d)
		print("Nao ha intersecao")
	else:
		print("Intervalo 1: ",a,",", b)
		print("Intervalo 2: ",c,",", d)
		print("Ha intersecao")
		
	

-- OUTPUT:
Intervalo 1:  1.0 , 2.0
Intervalo 2:  4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:12:10) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
if(b<a and d<c):
	print("Intervalo 1:",a,",", b)
	print("Intervalo 2:",c,",", d)
	print("Entradas invalidas")
else:
	
	if(a<c and b<c) or( a>d and b>d):
		print("Intervalo 1:",a,",", b)
		print("Intervalo 2:",c,",", d)
		print("Nao ha intersecao")
	else:
		print("Intervalo 1:",a,",", b)
		print("Intervalo 2:",c,",", d)
		print("Ha intersecao")
		
	

-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:12:14) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
if(b<a and d<c):
	print("Intervalo 1:",a,",", b)
	print("Intervalo 2:",c,",", d)
	print("Entradas invalidas")
else:
	
	if(a<c and b<c) or( a>d and b>d):
		print("Intervalo 1:",a,",", b)
		print("Intervalo 2:",c,",", d)
		print("Nao ha intersecao")
	else:
		print("Intervalo 1:",a,",", b)
		print("Intervalo 2:",c,",", d)
		print("Ha intersecao")
		
	

-- EXECUTION TIME:
0.180928
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Nao ha intersecao
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:12:17) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
if(b<a and d<c):
	print("Intervalo 1:",a,",", b)
	print("Intervalo 2:",c,",", d)
	print("Entradas invalidas")
else:
	
	if(a<c and b<c) or( a>d and b>d):
		print("Intervalo 1:",a,",", b)
		print("Intervalo 2:",c,",", d)
		print("Nao ha intersecao")
	else:
		print("Intervalo 1:",a,",", b)
		print("Intervalo 2:",c,",", d)
		print("Ha intersecao")
		
	

-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-30 11:13:36) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
if(b<a and d<c):
	print("Intervalo 1:",a,",", b)
	print("Intervalo 2:",c,",", d)
	print("Entradas invalidas")
else:
	
	if(a<c and b<c) or( a>d and b>d):
		print("Intervalo 1:",a,",", b)
		print("Intervalo 2:",c,",", d)
		print("Nao ha intersecao")
	else:
		print("Intervalo 1:",a,",", b)
		print("Intervalo 2:",c,",", d)
		print("Ha intersecao")
		
	

-- OUTPUT:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-30 11:14:22) 
-- CODE:
a=float(input())
b=float(input())
c=float(input())
d=float(input())
if(b<a or d<c):
	print("Intervalo 1:",a,",", b)
	print("Intervalo 2:",c,",", d)
	print("Entradas invalidas")
else:
	
	if(a<c and b<c) or( a>d and b>d):
		print("Intervalo 1:",a,",", b)
		print("Intervalo 2:",c,",", d)
		print("Nao ha intersecao")
	else:
		print("Intervalo 1:",a,",", b)
		print("Intervalo 2:",c,",", d)
		print("Ha intersecao")
		
	

-- EXECUTION TIME:
0.299561
-- TEST CASE 1:
---- input:
1
2
4
5
---- correct output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
---- user output:
Intervalo 1: 1.0 , 2.0
Intervalo 2: 4.0 , 5.0
Nao ha intersecao
-- TEST CASE 2:
---- input:
1.5
5
2.5
3
---- correct output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
---- user output:
Intervalo 1: 1.5 , 5.0
Intervalo 2: 2.5 , 3.0
Ha intersecao
-- TEST CASE 3:
---- input:
-1
-3
1
3
---- correct output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
---- user output:
Intervalo 1: -1.0 , -3.0
Intervalo 2: 1.0 , 3.0
Entradas invalidas
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
